<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gała</string>
    <string name="single_player">single player</string>
    <string name="multi_player">multiplayer</string>
    <string name="settings">settings</string>
	<string name="ai_difficulty">ai difficulty</string>
	<string name="board_width">board width</string>
	<string name="board_height">board height</string>
	<string name="goal_width">goal width</string>
	<string name="quit_message">Do you really want to quit?</string>
	<string name="be_client">be client</string>
	<string name="top_player_color">top player color</string>
	<string name="bottom_player_color">bottom player color</string>
	<string name="available_players">Available players</string>
</resources>
