<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <view
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            class="main.gala.activities.BackgroundView"
            android:scaleType="center"
            android:id="@+id/backgroundView"
            android:layout_gravity="center" />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_gravity="center" android:weightSum="1">
        <ImageView
                android:src="@drawable/logo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView" android:layout_gravity="center_horizontal" android:layout_marginTop="40dp"
                />

        <Button
                android:id="@+id/singlePlayerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single_player"
                android:textColor="@drawable/button_selector"
                android:textSize="25dp"
                android:onClick="singlePlayer"
                android:layout_gravity="center|top"
                android:layout_marginTop="50dp"
                android:background="@android:color/transparent"/>

        <Button
                android:id="@+id/multiPlayerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="multiPlayer"
                android:text="@string/multi_player"
                android:textColor="@drawable/button_selector"
                android:textSize="25dp"
                android:layout_gravity="center|"
                android:layout_marginTop="60dp"
                android:background="@android:color/transparent"/>

        <Button
                android:id="@+id/settingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:text="@string/settings"
                android:textColor="@drawable/button_selector"
                android:textSize="25dp"
                android:onClick="settings"
                android:background="@android:color/transparent">
        </Button>

    </LinearLayout>

</FrameLayout>